// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<button
  className="Button"
  disabled={false}
  onClick={[Function]}
  type="submit"
>
  Name
</button>
`;

exports[`Button renders in a loading mode 1`] = `
<button
  className="Button"
  disabled={true}
  onClick={[Function]}
  type="submit"
>
  <Spinner />
</button>
`;
